# legora

./: .env.example  .gitignore  Dockerfile_dagster  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
legora_dagster/: README.md  pyproject.toml
legora_scrapy/: requirements.txt  scrapy.cfg
legora_scrapy/workplacerelations/: pipelines.py  settings.py
legora_scrapy/workplacerelations/spiders/: decisions.py
src/legora_dagster/defs/: assets.py  resources.py  schedules.py
src/legora_scrapy/workplacerelations/: items.py  middlewares.py  pipelines.py  settings.py
src/legora_scrapy/workplacerelations/spiders/: decisions.py
